# wgpu-firefly

./: .gitattributes  .gitignore  AGENT.md  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  build.bat
assets/models/: sponza-png.glb
assets/shaders/: pbr_forward.wgsl  pbr_shadow.wgsl  pbr_tonemap.wgsl
docs/: design.md  requirements.md  tasks.md
examples/: CMakeLists.txt  hello_triangle.cpp
examples/forward_sphere/: main.cpp
examples/model_viewer/: main.cpp
examples/sponza_viewer/: camera_controller.hpp  main.cpp
src/core/: app.cpp  app.cppm  core.cppm  engine.cpp  engine.cppm  event.cppm  logger.cpp  logger.cppm  time.cpp  time.cppm  types.cppm
src/ecs/: components.cpp  components.cppm  ecs.cppm  engine_components.cppm  engine_systems.cpp  engine_systems.cppm  phases.cpp  phases.cppm  systems.cpp  systems.cppm  world.cpp  world.cppm
src/platform/: file_system.cpp  file_system.cppm  input.cpp  input.cppm  platform.cppm  window.cpp  window.cppm
src/renderer/: buffer.cpp  buffer.cppm  camera.cppm  command.cpp  command.cppm  device.cpp  device.cppm  forward_renderer.cppm  material.cpp  material.cppm  mesh.cppm  pipeline.cpp  pipeline.cppm  render.cppm  render_graph.cpp  renderer.cpp  renderer.cppm  sampler.cpp  sampler.cppm  texture.cpp  texture.cppm
src/renderer/core/: forward_renderer.cpp  forward_renderer.cppm  render_graph.cppm
src/renderer/gpu/: device.cpp  device.cppm  pipeline.cppm  shader.cpp  shader.cppm  texture.cppm
src/renderer/scene/: camera.cpp  mesh.cpp  mesh.cppm
src/resource/: manager.cppm  model_importer.cpp  model_importer.cppm  resource.cppm  texture_importer.cpp  texture_importer.cppm
src/scene/: scene.cppm  scene_manager.cpp  scene_manager.cppm  scene_node.cpp  scene_node.cppm
tests/: CMakeLists.txt  build_verification_test.cpp  test_integration.cpp
tests/core/: test_core.cpp
tests/ecs/: test_ecs.cpp  test_ecs_engine.cpp
tests/platform/: test_platform.cpp
tests/renderer/: test_renderer.cpp
tests/resource/: test_resource.cpp
tests/scene/: test_scene.cpp
